# onnx-pb

./: README.md  generate.sh  pyproject.toml
src/onnx_pb/: __init__.py  __init__.pyi  onnx_ml_pb2.py  onnx_ml_pb2.pyi  onnx_pb2.py  onnx_pb2.pyi
