[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-pb"
version = "0.0.1"
description = "Protobuf only ONNX library"
authors = [{ name = "Justin Chu", email = "justinchu@microsoft.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
keywords = ["onnx", "protobuf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["protobuf>=3.20.2"]

[project.urls]
Repository = "https://github.com/justinchuby/onnx-pb"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--tb=short --color=yes"
